--- a/fsw2/barberfsw/package.json
+++ b/fsw2/barberfsw/package.json
@@ -14,6 +14,9 @@
     "react": "^18",
     "react-dom": "^18"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
@@ -26,6 +29,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.9.0",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
